package com.anna.domain;

import java.util.List;

public class CustomerDTO {

}